* Minor update to new Drake

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -82,7 +82,7 @@ bincc_hello_src =
 bincxx_hello_src = hello_world.cpp
 bin_hello_export = 
 bin_hello_deps = libhello.a
-bin_hello_pkg = drake drake-intel-ia
+bin_hello_pkg = drake drake-intel-ia drake-scheduler
 bin_hello_libs = -lhello
 bin_hello_ldflags = -L.
 bin_hello_cflags =  
